feat: fixes