@@ -8,8 +8,7 @@ public record DsseEnvelope(String payload, String payloadType, List<Signature> s
 
     public static final String IN_TOTO_PAYLOAD_TYPE = "application/vnd.in-toto+json";
 
-    /** The first signature's key id, or {@code null} if unsigned. Avoids exposing {@link Signature}. */
     public String keyId() {
-        return signatures.isEmpty() ? null : signatures.get(0).keyid();
+        return signatures.isEmpty() ? null : signatures.getFirst().keyid();
     }
 }
